--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   </select>
   <button onclick="addGoal()">Add Goal</button>
 </div>
+<div class="auth-box">
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
+  <button onclick="signUp()">Sign Up</button>
+  <button onclick="signIn()">Sign In</button>
+  <button onclick="signOut()" style="display:none;">Sign Out</button>
+</div>
     <script src="app.js"></script>
 <!-- Load Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
