--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 Future Goals</h1>
-        <div class="glass-card">
-            <input type="text" id="goalInput" placeholder="Add a new goal...">
-            <button onclick="addGoal()">Add Goal</button>
-        </div>
-        <div id="goalsList"></div>
-    </div>
+        <h1>🚀 Future ᘜᓍᗩᒪS</h1>
+        
     <div class="glass-card">
   <input type="text" id="goalInput" placeholder="Goal...">
   <input type="datetime-local" id="dueDateInput">
